# pyculator

./: README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
config/: config.json  config.py
core/: calculator.py  history.py
data/: histories.json  storage.py
logs/: logging.py
models/: config.py
numerra/: main.py  notes.txt
numerra.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
numerra/core/: calculator.py  errors.py  history.py  operations.py
numerra/data/: storage.py
numerra/enums/: menu.py
numerra/logs/: logging.py
numerra/models/: history_item.py
numerra/tests/: test_histories.py  test_operations.py
numerra/utilities/: input_handler.py
tests/: test_histories.py  test_operations.py
